# daehongdan

./: .gitignore  README.md
drivers/: README.md
drivers/dht22/: Makefile  dht22_driver.c
drivers/gas_sensor/: Makefile  ads1115_driver.c  ads_1115.cpp
dts/: ads1115-overlay.dts  dht22-overlay.dts
qt_client/: CMakeLists.txt  dashboard_main.cpp  qt_main.cpp
qt_client/src/core/: DetectionTypes.h  MainWindow.cpp  MainWindow.h  ZoneTypes.cpp  ZoneTypes.h
qt_client/src/network/: DetectionStreamClient.cpp  DetectionStreamClient.h  ServerLink.cpp  ServerLink.h  StreamReceiver.cpp  StreamReceiver.h  TlsClient.cpp  TlsClient.h
qt_client/src/network/vlc/: libvlc_min.h
qt_client/src/pages/: ControlPage.cpp  ControlPage.h  EventLogPage.cpp  EventLogPage.h  GraphPage.cpp  GraphPage.h  HelpPage.cpp  HelpPage.h  LoginPage.cpp  LoginPage.h  MonitorPage.cpp  MonitorPage.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h
qt_client/src/widgets/: DetectionOverlay.cpp  DetectionOverlay.h  GasGraphWidget.cpp  GasGraphWidget.h  StatusPanel.cpp  StatusPanel.h  VideoWidget.cpp  VideoWidget.h  WarningAlertDialog.cpp  WarningAlertDialog.h  gasgraphwidget.cpp
server/opencv/: AppConfig.h  BridgeMain.cpp  CMakeLists.txt  CameraStream.cpp  CameraStream.h  ConsoleFireApplication.cpp  ConsoleFireApplication.h  DetectionTypes.h  DisplayUtils.cpp  DisplayUtils.h  FireAlarmController.cpp  FireAlarmController.h  FireCandidateTracker.cpp  FireCandidateTracker.h  FireDetectionRuntime.cpp  FireDetectionRuntime.h  FireDetector.cpp  FireDetector.h  FireDetector_1.cpp  FireDetector_1.h  FireMaskBuilder.cpp  FireMaskBuilder.h  FireView.cpp  FireView.h  FlameDetector.cpp  FlameDetector.h  main.cpp
server/rtsp/: gst_opencv_1ch.cpp  gst_opencv_4ch_grid.cpp  main_4ch_grid.cpp  opencv_1ch.cpp  opencv_4ch_grid.cpp
server/streaming/: CMakeLists.txt  auto.crt  auto.key  mediamtx.yml  run-mediamtx.sh  stream_receiver.cpp
server/tls/: PROGRESS.md  TlsServer.cpp  TlsServer.h  main.cpp  server.crt  server.key
stm32_firmware/actuator_board/: .mxproject  CMakeLists.txt  FactorySafety.ioc
stm32_firmware/actuator_board/Core/Inc/: main.h  stm32f4xx_it.h
stm32_firmware/actuator_board/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32_firmware/actuator_board/cmake/stm32cubemx/: CMakeLists.txt
stm32_firmware/display_board/: .gitignore  CMakeLists.txt  test_project.ioc
stm32_firmware/display_board/Core/Src/: main.c
stm32_firmware/display_board/cmake/: starm-clang.cmake
